fix(product):修復產品卡片顯示金錢格式錯誤

--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -12,7 +12,7 @@
 </div>
 <div class="company">
   <span>{{ product.company }}</span>
-  <span>{{ product.price}}</span>
+  <span>{{ product.price | currency}}</span>
 </div>
 <div class="button">
   <button type="button" >檢視</button>
