--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,1 +1,1 @@
-<app-product-card-list [Products]="products"></app-product-card-list>
+<app-product-card-list [Products]="products" (view)="onView($event)"></app-product-card-list>
