--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,2 +1,2 @@
-<a routerLink="productPage" routerLinkActive="active">產品清單</a>
+<a routerLink="products" routerLinkActive="active">產品清單</a>
 <a routerLink="shoppingCard" routerLinkActive="active">購物車</a>
