fix(product-card):修復作者顯示錯誤

--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -4,8 +4,9 @@
   <span>{{ product.createDate | date : "yy/M/d" }}</span>
 </div>
 <div>
+  作者:  
   @for (author of product.authors; track author) {
-  <span>作者:  {{ author }}</span>
+  <span>{{ author }}</span>
   @if (!$last) {
   <span>、</span>
   } }
