--- a/src/app/product-detail-page/product-detail-page.component.html
+++ b/src/app/product-detail-page/product-detail-page.component.html
@@ -18,6 +18,7 @@
   <div>
     <strong>價格</strong>
     <span>{{ product.price | currency }}</span>
+    <span style="color:red;margin-left: 10px;">特價</span>
   </div>
   <div class="button">
     <button type="button" (click)="onBack()">返回</button>
