--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -17,6 +17,6 @@
 <div class="button">
   <button type="button" (click)="view.emit()" >明細</button>
   <span>
-    <button type="button" class="edit">加入購物車</button>
+    <button type="button" (click)="add.emit()" class="edit">加入購物車</button>
   </span>
 </div>
