--- a/src/app/shopping-car/shopping-car.component.css
+++ b/src/app/shopping-car/shopping-car.component.css
@@ -1,3 +1,87 @@
 :host {
   display: block;
+  padding: 10px;
+}
+
+.container {
+  display: flex;
+  gap:30px
+}
+
+.form-container {
+  flex: 1;
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+h2 {
+  text-align: center;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+input[type="text"] {
+  width: calc(100% - 120px);
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.error-message {
+  display: inline-block;
+  margin-left: 10px;
+  color: red;
+  font-size: 12px;
+}
+
+.cart-container {
+  flex: 3;
+  margin: 50px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.cart-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.cart-table th {
+  padding: 10px;
+  border: 1px solid #ccc;
+  text-align: left;
+}
+
+.quantity-input {
+  width: 50px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  text-align: center;
+}
+
+.delete-button {
+  background-color: white;
+  color: red;
+  border: 1px solid red;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+.delete-button:hover {
+  background-color: red;
+  color: white;
 }
