--- a/src/app/shopping-car/shopping-car.component.html
+++ b/src/app/shopping-car/shopping-car.component.html
@@ -19,21 +19,35 @@
             </div>
         </form>
     </div>
-    
+
     <div class="cart-container">
         <h2>購買項目</h2>
         <table class="cart-table">
             <thead>
                 <tr>
-                    <th>1</th>
-                    <th>C 產品</th>
+                    <th>產品名稱</th>
                     <th>
-                        <input type="text" value="1" class="quantity-input">
+                        數量
                     </th>
-                    <th>$1,580.00</th>
-                    <th><button class="delete-button">刪除</button></th>
+                    <th>總價格</th>
+                    <th>操作</th>
                 </tr>
             </thead>
+            @for (product of cartProdcuts;track product.id ) {
+
+            <tr>
+                <th>{{ product.name }}</th>
+                <th>
+                    {{ product.quantity }}
+                </th>
+                <th>$ {{ product.quantity * product.price }}</th>
+                <th>
+                    <button class="delete-button">刪除</button>
+                </th>
+            </tr>
+            }
         </table>
     </div>
+
+    <button>送出訂單 {{ totalCost }}</button>
 </div>
