--- a/src/app/shopping-car/shopping-car.component.html
+++ b/src/app/shopping-car/shopping-car.component.html
@@ -4,17 +4,17 @@
         <form>
             <div class="form-group">
                 <label for="name">姓名</label>
-                <input type="text" id="name" placeholder="請輸入姓名">
+                <input type="text" id="name" placeholder="請輸入姓名" required>
                 <span class="error-message">請輸入姓名</span>
             </div>
             <div class="form-group">
                 <label for="address">地址</label>
-                <input type="text" id="address" placeholder="請輸入地址">
+                <input type="text" id="address" placeholder="請輸入地址" required>
                 <span class="error-message">請輸入地址</span>
             </div>
             <div class="form-group">
                 <label for="phone">電話</label>
-                <input type="text" id="phone" placeholder="請輸入電話">
+                <input type="text" id="phone" placeholder="請輸入電話" required>
                 <span class="error-message">請輸入電話</span>
             </div>
         </form>
@@ -38,16 +38,17 @@
                 <th>{{ product.name }}</th>
                 <th>
                     {{ product.quantity }}
+                    <button class="add-button" (click)="onAdd(product)">+</button>
+                    <button class="delete-button" (click)="onRemove(product)">-</button>
                 </th>
                 <th>$ {{ product.quantity * product.price }}</th>
                 <th>
-                    <button class="add-button" (click)="onAdd(product)">新增</button>
-                    <button class="delete-button" (click)="onRemove(product)">刪除</button>
+                    <button class="delete-button" (click)="onAllRemove(product)">全部刪除</button>
                 </th>
             </tr>
             }
         </table>
     </div>
-
-    <button>送出訂單 {{ totalCost }}</button>
 </div>
+
+<button>送出訂單 ({{ totalCost |currency }})</button>
