--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,1 +1,16 @@
-<app-product-card-list [Products]="(products$|async)|| []" (view)="onView($event)" (add)="onAdd($event)"></app-product-card-list>
+<div>
+    <div class="toolbar">
+        <span>
+          <input type="text" [formControl]="formControl"  placeholder="產品名稱" />
+          <button type="button" (click)="condition = formControl.value">查詢</button>
+        </span>
+      </div>
+      <app-product-card-list 
+         [totalCount]="(totalCount$ | async) || 0"
+         [(pageIndex)]="pageIndex"
+         [pageSize]="pageSize" 
+         [Products]="(products$|async)|| []" 
+         (view)="onView($event)" 
+         (add)="onAdd($event)">
+    </app-product-card-list>
+</div>
