--- a/src/app/shopping-car/shopping-car.component.html
+++ b/src/app/shopping-car/shopping-car.component.html
@@ -1,22 +1,33 @@
 <div class="container">
     <div class="form-container">
         <h2>基本資料</h2>
-        <form>
+        <form [formGroup]="form">
             <div class="form-group">
                 <label for="name">姓名</label>
-                <input type="text" id="name" placeholder="請輸入姓名" required>
-                <span class="error-message">請輸入姓名</span>
+                <input type="text" id="name" placeholder="請輸入姓名" formControlName="name">
+                @if (name.hasError('required')) {
+                <div class="error-message">請輸入姓名</div>
+                }
             </div>
+
             <div class="form-group">
                 <label for="address">地址</label>
-                <input type="text" id="address" placeholder="請輸入地址" required>
-                <span class="error-message">請輸入地址</span>
+                <input type="text" id="address" placeholder="請輸入地址" formControlName="address">
+                @if (address.hasError('required')) {
+                <div class="error-message">請輸入地址</div>
+                }
             </div>
+
             <div class="form-group">
                 <label for="phone">電話</label>
-                <input type="text" id="phone" placeholder="請輸入電話" required>
-                <span class="error-message">請輸入電話</span>
+                <input type="text" id="phone" placeholder="請輸入電話" formControlName="phone">
+                @if (phone.hasError('required')) {
+                <div class="error-message">請輸入電話</div>
+                } @if (phone.hasError('pattern')) {
+                <div class="error-message">電話必須為數字</div>
+                }
             </div>
+
         </form>
     </div>
 
@@ -43,12 +54,12 @@
                 </th>
                 <th>$ {{ product.quantity * product.price }}</th>
                 <th>
-                    <button class="delete-button" (click)="onAllRemove(product)">全部刪除</button>
+                    <button class="delete-button" (click)="onRemoveSingleProduct(product)">全部刪除</button>
                 </th>
             </tr>
             }
         </table>
     </div>
 </div>
-
-<button>送出訂單 ({{ totalCost |currency }})</button>
+<button class="delete-button" (click)="onRemoveAllProduct()">刪除全部商品</button>
+<button class="add-button" [disabled]="form.invalid" (click)="onSendCheck()">送出訂單 ({{ totalCost | currency }})</button>
