--- a/src/app/shopping-car/shopping-car.component.html
+++ b/src/app/shopping-car/shopping-car.component.html
@@ -30,9 +30,9 @@
 
         </form>
     </div>
-
+    
     <div class="cart-container">
-        <h2>購買項目</h2>
+        <h2>購物車内容</h2>
         <table class="cart-table">
             <thead>
                 <tr>
